--- a/gallerypics/templates/base.html
+++ b/gallerypics/templates/base.html
@@ -1,7 +1,7 @@
 {% load bootstrap3 %} {% load static%}
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" href="{% static 'css/basepic.css' %}"> {% endblock %}
+<link rel="stylesheet" href="{% static 'css/basepic.css' %}">
 </head>
 
 <body>
@@ -13,4 +13,4 @@
 </html>
 
 <head>
-    <meta charset="utf-8"> {% block styles %} {% bootstrap_css %}
+    <meta charset="utf-8"> {% bootstrap_css %}
