--- a/gallerypics/templates/photos.html
+++ b/gallerypics/templates/photos.html
@@ -1,5 +1,4 @@
- {% extends "photo/base.html" %} 
- {% block content %}
+ {% extends "base.html" %} {% block content %}
 
 
 <div class="container-fluid gallery">
