--- a/gallerypics/templates/photos.html
+++ b/gallerypics/templates/photos.html
@@ -1,11 +1,9 @@
- {% extends "base.html" %} {% block content %}
 <div>
     <h1>My Gallery </h1>
 </div>
-<div>Here is my gallery</div>
 {% extends 'base.html' %} {% block content %} {{block.super}}
-<div class="container-fluid" style="background-color: black; background-position: center; background-repeat: no-repeat; background-size: cover;">
-    <div class="jumbotron jumbotron-fluid">
+<div class="container-fluid" style="background-color:white; background-position: center; background-repeat: no-repeat; background-size: cover;">
+    <div class="jumbotron jumbotron-fluid" style="background-image: url(https://images.unsplash.com/photo-1529257216294-8daee3ec33e8?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1yZWxhdGVkfDh8fHxlbnwwfHx8&auto=format&fit=crop&w=500&q=60);">
         <div class="container">
             <h1 class="display-4">Welcome To My Gallery Hub</h1>
             <p class="lead">This are the <strong>Categories to be searched;food,bikes,scenery,animals;</strong></p>
