modified photos html

--- a/gallerypics/templates/search.html
+++ b/gallerypics/templates/search.html
@@ -1,8 +1,7 @@
 {% extends 'base.html' %} {% block content %} {{block.super}}
 <div class="container-fluid">
 
-    <h1>Welcome To My Gallery Hub</h1>
-    <h3>This is are the <strong>Category;food,bikes,scenery,animals,</strong></h3>
+    <h3>This is are the <strong>Category;food,nature,bikes;</strong></h3>
     <div class="jumbotron jumbotron-fluid  mb-5">
         <div class="container">
             {% if images%}
