--- a/gallerypics/templates/photos.html
+++ b/gallerypics/templates/photos.html
@@ -5,8 +5,8 @@
 <div class="container-fluid" style="background-color:white; background-position: center; background-repeat: no-repeat; background-size: cover;">
     <div class="jumbotron jumbotron-fluid" style="background-image: url(https://images.unsplash.com/photo-1514225437302-0ce6b0522e62?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1350&q=80); background-position: center; background-repeat: no-repeat; background-size: cover;">
         <div class="container">
-            <h1 class="display-4">Welcome To My Gallery Hub</h1>
-            <p class="lead">This are the <strong>Categories to be searched;food,bikes,scenery,animals;</strong></p>
+            <h1 class="display-4">My Gallery</h1>
+            <p class="lead">Category<strong> to be searched food,nature,bikes</strong></p>
         </div>
     </div>
     <div class="column container">
