--- a/gallerypics/templates/navbar.html
+++ b/gallerypics/templates/navbar.html
@@ -10,7 +10,7 @@
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="{% url 'image' %}">GALLERY HUB</a>
+                <a class="navbar-brand" href="{% url 'image' %}">GALLERY </a>
             </div>
             <!-- Adding a search form  -->
             <div class="col-sm-4 col-md-4 navbar-right">
