--- a/gallerypics/templates/photos.html
+++ b/gallerypics/templates/photos.html
@@ -3,44 +3,49 @@
 </div>
 {% extends 'base.html' %} {% block content %} {{block.super}}
 <div class="container-fluid" style="background-color:white; background-position: center; background-repeat: no-repeat; background-size: cover;">
-    <div class="jumbotron jumbotron-fluid" style="background-image: url(https://images.unsplash.com/photo-1514225437302-0ce6b0522e62?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1350&q=80); background-position: center; background-repeat: no-repeat; background-size: cover;">
-        <div class="container">
-            <h1 class="display-4">My Gallery</h1>
-            <p class="lead">Category<strong> to be searched food,nature,bikes</strong></p>
+    <div class="col-md-2"></div>
+    <div>
+        <div class="col-md-8 jumbotron">
+
+            <h3 style="font-weight:bold;">Welcome to your Gallery pics</h3>
+            <p class="lead">Find your results by checking Sports,Entertainment,Boats,Art
+            </p>
         </div>
     </div>
-    <div class="column container">
-        {% for image in image %}
-        <div class="col-md-4 col-sm-4 col-xs-4">
-            <img src="{{image.image.url}}" class="img-responsive img-fluid img-thumbnail" style="width: 300px;height:200px" data-toggle="modal" data-target="#{{ image.id }}">
-        </div>
-        <!-- Modal -->
-        <div class="modal fade center" id="{{ image.id }}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-            <div class="modal-dialog modal-full-height modal-right" role="document">
-                <div class="modal-content">
-                    <div class="modal-heading">
-                        <h3 class="modal-title w-100 text-center" id="imagetitle"> {{image.image_name}}</h3>
-                        <button type="btn btn-primary" class="close" data-dismiss="modal" aria-label="Close">
+    <div class="col-md-2"></div>
+
+    <br>
+    <br> {% for image in image %}
+    <div class="col-md-4 col-sm-4 col-xs-4 m-5">
+        <img src="{{image.image.url}}" class="img-responsive img-fluid img-thumbnail " style="width: 450px;height:250px" data-toggle="modal" data-target="#{{ image.id }}">
+    </div>
+    <!-- Modal -->
+    <div class="modal fade center" id="{{ image.id }}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-full-height modal-right" role="document">
+            <div class="modal-content">
+                <div class="modal-heading">
+                    <h3 class="modal-title w-100 text-center" id="imagetitle"> {{image.image_name}}</h3>
+                    <button type="btn btn-primary" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
-                    </div>
-                    <div class="modal-body">
-                        <img class="card-img-top img-responsive" id="img{{image.id}}" src="{{image.image.url}}" alt="Card image cap">
-                        <p class="card-text photo ">Image description : {{image.image_description}}.</p>
-                        <p class="card-text shot">Location: {{image.image_location}}</p>
-                        <p class="card-text cate">Category: {{image.image_category}}</p>
-                    </div>
-                    <div class="modal-footer text-center">
-                        <input class="form-control input-lg" type="text" value="{{image.image.url}}" id="{{image.id}}.url">
+                </div>
+                <div class="modal-body">
+                    <img class="card-img-top img-responsive" id="img{{image.id}}" src="{{image.image.url}}" alt="Card image cap">
+                    <p class="card-text photo ">Image description : {{image.image_description}}.</p>
+                    <p class="card-text shot">Location: {{image.image_location}}</p>
+                    <p class="card-text cate">Category: {{image.image_category}}</p>
+                </div>
+                <div class="modal-footer text-center">
+                    <input class="form-control input-lg" type="text" value="{{image.image.url}}" id="{{image.id}}.url">
 
-                        <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
-                    </div>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
-        {% endfor %}
     </div>
-    {% for item in location_images %}
-    <a class="button p-3" id="btn" href="/location/{{item.location_name}}">{{item.location_name}}</a> {% endfor %}
+    {% endfor %}
+</div>
+{% for item in location_images %}
+<a class="button p-3" id="btn" href="/location/{{item.location_name}}">{{item.location_name}}</a> {% endfor %}
 </div>
 {% endblock %}
